--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <section>
 
     <div class="stockone">
-        <img src="images/photo.jpg" alt="stockphoto">
+        <img src="photo.jpg" alt="stockphoto">
         <h2 class="stockname">Stacey Loo</h2>
         <p class="desc">Most amazing girl</p>
 
