--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <a href="index.html" title="HomePage">
-                <img src="40-Nikocado-Avocado-300x300.jpg" alt="icon">
+                <img src="./images/40-Nikocado-Avocado-300x300.jpg" alt="icon">
                 <h2>LaiExpress</h2>
             </a>
             <a class="other" href="info.html">Info</a>
@@ -26,7 +26,7 @@
 <section>
 
     <div class="stockone">
-        <img src="photo.jpg" alt="stockphoto">
+        <img src="./photo.jpg" alt="stockphoto">
         <h2 class="stockname">Stacey Loo</h2>
         <p class="desc">Most amazing girl</p>
 
