--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>LaiExpress</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/icon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.webp" type="image/x-icon">
 </head>
 <body>
     
     <header>
         <nav>
             <a href="index.html" title="HomePage">
-                <img src="./images/40-Nikocado-Avocado-300x300.jpg" alt="icon">
+                <img src="./40-Nikocado-Avocado-300x300.jpg" alt="icon">
                 <h2>LaiExpress</h2>
             </a>
             <a class="other" href="info.html">Info</a>
